--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,12 @@
   "require": {
     "php": ">=8.0",
     "ext-json": "*",
-    "codeception/codeception": "5.0.7"
+    "codeception/codeception": "5.0.7",
+    "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0",
+    "spryker/checkout-rest-api-extension": "^1.5",
+    "spryker/glossary-storage": "^1.0.0",
+    "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
+    "spryker/country": "^3.1.0 || ^4.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "^2.1.1",
