--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=8.0",
     "ext-json": "*",
-    "codeception/codeception": "5.0.10"
+    "codeception/codeception": "5.0.10",
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0",
     "spryker/checkout-rest-api-extension": "^1.5",
     "spryker/glossary-storage": "^1.0.0",
