--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,12 @@
   "require": {
     "php": ">=8.0",
     "ext-json": "*",
-    "codeception/codeception": "5.0.10"
+    "codeception/codeception": "5.0.10",
+    "spryker/checkout-rest-api-extension": "^1.5.0",
+    "spryker/glossary-storage": "^1.0.0",
+    "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
+    "spryker/country": "^3.1.0 || ^4.0.0",
+    "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "^2.1.1",
@@ -21,15 +26,21 @@
     "spryker-sdk/phpstan-spryker": "*"
   },
   "replace": {
+    "fond-of-kudu/checkout-rest-api-country-connector": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
+      "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
+      "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Zed/CheckoutRestApiCountryConnector"
     }
   },
   "autoload-dev": {
     "psr-4": {
+      "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
+      "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
+
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
     }
