--- a/bundles/checkout-rest-api-country-connector/composer.json
+++ b/bundles/checkout-rest-api-country-connector/composer.json
@@ -18,7 +18,7 @@
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
-    "fond-of-codeception/spryker": "^2.0.0",
+    "fond-of-codeception/spryker": "*",
     "spryker/code-sniffer": "*",
     "spryker-sdk/phpstan-spryker": "*"
   },
