--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,8 @@
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "*",
+    "fond-of-codeception/spryker": "^2.1.1",
     "spryker/code-sniffer": "*",
-    "spryker/silex": "*",
     "spryker-sdk/phpstan-spryker": "*"
   },
   "replace": {
