chore: checkout rest api country connector (#9)
* fix typo in transfer.xml, update dependency, increase verson to 1.0.1
* remove checkout-rest-api-country-connector from unit-tests temporary

---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/codeception.yml
+++ b/codeception.yml
@@ -42,9 +42,5 @@ env:
           generate_ide_auto_completion: true
           ide_auto_completion_source_directories:
             './bundles/*/src/': '*/*/'
-            './vendor/fond-of-spryker/*/src/': '*/*/'
+            './vendor/fond-of-kudu/*/src/': '*/*/'
           supported_source_identifiers:
-            - erp-delivery-note
-            - erp-invoice
-            - erp-order
-            - page
