--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,15 @@
   "require": {
     "php": ">=8.0",
     "ext-json": "*",
-    "codeception/codeception": "5.0.10",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
-    "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.0"
+    "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "*",
+    "fond-of-codeception/spryker": "^2.1.1",
     "spryker/code-sniffer": "*",
-    "spryker/silex": "*",
     "spryker-sdk/phpstan-spryker": "*"
   },
   "replace": {
