--- a/codeception.yml
+++ b/codeception.yml
@@ -1,6 +1,7 @@
 namespace: fond-of-kudu/fond-of-kudu
 
 include:
+  - bundles/checkout-rest-api-country-connector
 
 suites:
   unit:
@@ -42,5 +43,7 @@ env:
           generate_ide_auto_completion: true
           ide_auto_completion_source_directories:
             './bundles/*/src/': '*/*/'
-            './vendor/fond-of-kudu/*/src/': '*/*/'
+            './vendor/fond-of-spryker/*/src/': '*/*/'
           supported_source_identifiers:
+            - page
+            - conditional-availability-period
