--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
   ],
   "require": {
     "php": ">=8.0",
-    "ext-json": "*",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
@@ -18,7 +17,8 @@
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "^2.1.1",
+    "fond-of-codeception/spryker": "*",
+    "rector/rector": "*",
     "spryker/code-sniffer": "*",
     "spryker-sdk/phpstan-spryker": "*"
   },
