--- a/bundles/product-image-storage-connector/composer.json
+++ b/bundles/product-image-storage-connector/composer.json
@@ -10,7 +10,9 @@
   ],
   "require": {
     "php": ">=8.0",
-    "spryker/product-storage-extension": "^1.0.0"
+    "spryker/product-storage-extension": "^1.0.0",
+    "spryker/storage": "^3.20.0",
+    "spryker/synchronization": "^1.16"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
