--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/product-storage-extension": "^1.0.0",
-    "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1"
+    "spryker/storage": "^3.20.0",
+    "spryker/synchronization": "^1.16",
+    "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1",
+    "spryker/product-image-storage": "^1.15"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
@@ -32,6 +35,7 @@
   "autoload": {
     "psr-4": {
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
+      "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
       "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Zed/CheckoutRestApiCountryConnector"
     }
