--- a/bundles/country-zipcode-restriction/codeception.yml
+++ b/bundles/country-zipcode-restriction/codeception.yml
@@ -1,9 +1,4 @@
-namespace: fond-of-kudu/fond-of-kudu
-
-include:
-  - bundles/checkout-rest-api-country-connector
-  - bundles/country-zipcode-restriction
-  - bundles/product-image-storage-connector
+namespace: fond-of-kudu/country-zipcode-restriction
 
 suites:
   unit:
@@ -23,6 +18,8 @@ paths:
 
 coverage:
   enabled: true
+  include:
+    - src/*.php
 
 modules:
   enabled:
@@ -35,7 +32,7 @@ modules:
       generate_ide_auto_completion: false
 
 env:
-  monorepo:
+  standalone:
     modules:
       config:
         \FondOfCodeception\Module\Spryker:
@@ -43,9 +40,4 @@ env:
           generate_map_classes: true
           generate_propel_classes: true
           generate_ide_auto_completion: true
-          ide_auto_completion_source_directories:
-            './bundles/*/src/': '*/*/'
-            './vendor/fond-of-spryker/*/src/': '*/*/'
-          supported_source_identifiers:
-            - page
-            - conditional-availability-period
+  monorepo:
