--- a/bundles/country-zipcode-restriction/composer.json
+++ b/bundles/country-zipcode-restriction/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "require": {
-    "php": ">=8.0"
+    "php": ">=8.0",
+    "spryker/data-import": "^1.3.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
