--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
   "replace": {
     "fond-of-kudu/checkout-rest-api-country-connector": "*",
     "fond-of-kudu/country-zipcode-restriction": "*",
+    "fond-of-kudu/country-zipcode-restriction-import": "*",
     "fond-of-kudu/product-image-storage-connector": "*"
   },
   "minimum-stability": "dev",
@@ -37,6 +38,7 @@
   "autoload": {
     "psr-4": {
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
+      "FondOfKudu\\Zed\\CountryZipcodeRestrictionImport\\": "bundles/country-zipcode-restriction-import/src/FondOfKudu/Zed/CountryZipcodeRestrictionImport",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
@@ -47,6 +49,7 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/tests/FondOfKudu/Zed/CountryZipcodeRestriction",
+      "FondOfKudu\\Zed\\CountryZipcodeRestrictionImport\\": "bundles/country-zipcode-restriction-import/tests/FondOfKudu/Zed/CountryZipcodeRestrictionImport",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/tests/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
