add new bundle to labeler.yml

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -36,3 +36,6 @@ product-image-storage-connector:
 
 country-zipcode-restriction:
   - country-zipcode-restriction/**
+
+country-zipcode-restriction-import:
+  - country-zipcode-restriction-import/**
