--- a/bundles/country-zipcode-restriction/composer.json
+++ b/bundles/country-zipcode-restriction/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fond-of-kudu/country-zipcode-restriction",
+  "name": "fond-of-kudu/country-zipcode-restriction-import",
   "description": "",
   "license": "MIT",
   "authors": [
@@ -9,8 +9,7 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
-    "spryker/data-import": "^1.3.0"
+    "php": ">=8.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
