Revert "temporary changes, need do refactor"
This reverts commit 0ec69fae6e9d692765557a17db82df75623c7fc1.

--- a/codeception.yml
+++ b/codeception.yml
@@ -2,6 +2,8 @@ namespace: fond-of-kudu/fond-of-kudu
 
 include:
   - bundles/checkout-rest-api-country-connector
+  - bundles/country-zipcode-restriction
+  - bundles/product-image-storage-connector
 
 suites:
   unit:
