--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
   },
   "replace": {
     "fond-of-kudu/checkout-rest-api-country-connector": "*",
+    "fond-of-kudu/checkout-rest-api-country-extension": "*",
     "fond-of-kudu/country-zipcode-restriction": "*",
     "fond-of-kudu/product-image-storage-connector": "*"
   },
@@ -41,7 +42,8 @@
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
       "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
-      "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Zed/CheckoutRestApiCountryConnector"
+      "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
+      "FondOfKudu\\Zed\\CheckoutRestApiCountryExtension\\": "bundles/checkout-rest-api-country-extension/src/FondOfKudu/Zed/CheckoutRestApiCountryExtension"
     }
   },
   "autoload-dev": {
