add new bundle to github labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -39,3 +39,6 @@ product-image-storage-connector:
 
 country-zipcode-restriction:
   - country-zipcode-restriction/**
+
+checkout-data-product-country-filter:
+  - checkout-data-product-country-filter/**
