new module with plugin to extend mailtransfer with attachment of revocation policy

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -45,3 +45,6 @@ checkout-data-product-country-filter:
 
 checkout-data-gift-cart-payment-country-filter:
   - checkout-data-gift-cart-payment-country-filter/**
+
+oms-order-confirmation:
+  - oms-order-confirmation/**
