--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "spryker/data-import": "^1.3.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
+    "spryker/oms-extension": "^1.3",
     "spryker/product-image-storage": "^1.15",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/storage": "^3.20.0",
@@ -33,7 +34,8 @@
     "fond-of-kudu/checkout-rest-api-country-extension": "*",
     "fond-of-kudu/checkout-data-product-country-filter": "*",
     "fond-of-kudu/country-zipcode-restriction": "*",
-    "fond-of-kudu/product-image-storage-connector": "*"
+    "fond-of-kudu/product-image-storage-connector": "*",
+    "fond-of-kudu/oms-order-confirmation": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -48,7 +50,9 @@
       "FondOfKudu\\Zed\\CheckoutRestApiCountryExtension\\": "bundles/checkout-rest-api-country-extension/src/FondOfKudu/Zed/CheckoutRestApiCountryExtension",
       "FondOfKudu\\Zed\\CheckoutDataProductCountryFilter\\": "bundles/checkout-data-product-country-filter/src/FondOfKudu/Zed/CheckoutDataProductCountryFilter",
       "FondOfKudu\\Shared\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Shared/CheckoutDataGiftCartPaymentCountryFilter",
-      "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter"
+      "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
+      "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Zed/OmsOrderConfirmation",
+      "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Shared/OmsOrderConfirmation"
     }
   },
   "autoload-dev": {
@@ -59,6 +63,8 @@
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutDataProductCountryFilter\\": "bundles/checkout-data-product-country-filter/tests/FondOfKudu/Zed/CheckoutDataProductCountryFilter",
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
+      "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
+      "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Shared/OmsOrderConfirmation",
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
     }
