--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": ">=8.0",
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1",
+    "spryker/carts-rest-api": "^5.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/data-import": "^1.3.0",
@@ -29,6 +30,7 @@
     "spryker-sdk/phpstan-spryker": "*"
   },
   "replace": {
+    "fond-of-kudu/carts-rest-api": "*",
     "fond-of-kudu/checkout-rest-api-country-connector": "*",
     "fond-of-kudu/checkout-data-gift-cart-payment-country-filter": "*",
     "fond-of-kudu/checkout-rest-api-country-extension": "*",
