--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
+      "FondOfKudu\\Zed\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Zed/CartsRestApi",
+      "FondOfKudu\\Shared\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Shared/CartsRestApi",
+      "FondOfKudu\\Client\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Client/CartsRestApi",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
@@ -62,6 +65,7 @@
   },
   "autoload-dev": {
     "psr-4": {
+      "FondOfKudu\\Zed\\CartsRestApi\\": "bundles/carts-rest-api/tests/FondOfKudu/Zed/CartsRestApi",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/tests/FondOfKudu/Zed/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/tests/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Zed\\CheckoutRestApi\\": "bundles/checkout-rest-api/tests/FondOfKudu/Zed/CheckoutRestApi",
