--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -28,6 +28,9 @@ version:
 
 ### packages
 
+carts-rest-api:
+  - bundles/carts-rest-api/**
+  
 checkout-rest-api:
   - bundles/checkout-rest-api/**
 
