--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -30,7 +30,7 @@ version:
 
 carts-rest-api:
   - bundles/carts-rest-api/**
-  
+
 checkout-rest-api:
   - bundles/checkout-rest-api/**
 
@@ -42,6 +42,9 @@ checkout-rest-api-country-extension:
 
 product-image-storage-connector:
   - bundles/product-image-storage-connector/**
+
+quote:
+  - bundles/quote/**
 
 country-zipcode-restriction:
   - country-zipcode-restriction/**
