--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "spryker/oms-extension": "^1.3",
     "spryker/product-image-storage": "^1.15",
     "spryker/product-storage-extension": "^1.0.0",
+    "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
     "spryker/synchronization": "^1.16"
   },
