--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,8 @@
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
+      "FondOfKudu\\Shared\\Quote\\": "bundles/quote/src/FondOfKudu/Shared/Quote",
+      "FondOfKudu\\Zed\\Quote\\": "bundles/quote/src/FondOfKudu/Zed/Quote",
       "FondOfKudu\\Zed\\CheckoutRestApi\\": "bundles/checkout-rest-api/src/FondOfKudu/Zed/CheckoutRestApi",
       "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
