--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "spryker/oms-extension": "^1.3",
     "spryker/product-image-storage": "^1.15",
     "spryker/product-storage-extension": "^1.0.0",
+    "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
     "spryker/synchronization": "^1.16"
   },
@@ -52,6 +53,8 @@
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
+      "FondOfKudu\\Shared\\Quote\\": "bundles/quote/src/FondOfKudu/Shared/Quote",
+      "FondOfKudu\\Zed\\Quote\\": "bundles/quote/src/FondOfKudu/Zed/Quote",
       "FondOfKudu\\Zed\\CheckoutRestApi\\": "bundles/checkout-rest-api/src/FondOfKudu/Zed/CheckoutRestApi",
       "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/src/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
