new module skeleton with client and shared layer

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -57,3 +57,6 @@ checkout-data-gift-cart-payment-country-filter:
 
 oms-order-confirmation:
   - oms-order-confirmation/**
+
+catalog-sorting-price:
+  - catalog-sorting-price/**
