--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "php": ">=8.0",
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1",
     "spryker/carts-rest-api": "^5.0.0",
+    "spryker/catalog": "^5.2.0",
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
@@ -33,6 +34,7 @@
   },
   "replace": {
     "fond-of-kudu/carts-rest-api": "*",
+    "fond-of-kudu/catalog-sorting-price": "*",
     "fond-of-kudu/checkout-rest-api": "*",
     "fond-of-kudu/checkout-rest-api-country-connector": "*",
     "fond-of-kudu/checkout-data-gift-cart-payment-country-filter": "*",
@@ -49,6 +51,8 @@
       "FondOfKudu\\Zed\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Zed/CartsRestApi",
       "FondOfKudu\\Shared\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Shared/CartsRestApi",
       "FondOfKudu\\Client\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Client/CartsRestApi",
+      "FondOfKudu\\Shared\\CatalogSortingPrice\\": "bundles/catalog-sorting-price/src/FondOfKudu/Shared/CatalogSortingPrice",
+      "FondOfKudu\\Client\\CatalogSortingPrice\\": "bundles/catalog-sorting-price/src/FondOfKudu/Client/CatalogSortingPrice",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
