add catalog-sorting-price to labeler.yml

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -31,6 +31,9 @@ version:
 carts-rest-api:
   - bundles/carts-rest-api/**
 
+catalog-sorting-price:
+  - bundles/catalog-sorting-price/**
+
 checkout-rest-api:
   - bundles/checkout-rest-api/**
 
