chore: init new module catalog-sorting-price (#68)
* new module with plugin to extend mailtransfer with attachment of revocation policy
* rename package to catalog-sort-price

---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -31,6 +31,9 @@ version:
 carts-rest-api:
   - bundles/carts-rest-api/**
 
+catalog-sort-price:
+  - bundles/catalog-sort-price/**
+
 checkout-rest-api:
   - bundles/checkout-rest-api/**
 
