--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "spryker/data-import": "^1.3.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
+    "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
     "spryker/product-image-storage": "^1.15",
     "spryker/product-storage-extension": "^1.0.0",
@@ -66,7 +67,9 @@
       "FondOfKudu\\Shared\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Shared/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Zed/OmsOrderConfirmation",
-      "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Shared/OmsOrderConfirmation"
+      "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Shared/OmsOrderConfirmation",
+      "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/src/FondOfKudu/Zed/OmsRetryCaptureProcess",
+      "FondOfKudu\\Shared\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/src/FondOfKudu/Shared/OmsRetryCaptureProcess"
     }
   },
   "autoload-dev": {
@@ -81,6 +84,7 @@
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
       "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Shared/OmsOrderConfirmation",
+      "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess"
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
     }
