chore: oms payone error logging (#75)
* new module with plugin to extend mailtransfer with attachment of revocation policy

---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -61,5 +61,8 @@ checkout-data-gift-cart-payment-country-filter:
 oms-order-confirmation:
   - oms-order-confirmation/**
 
+oms-payone-error:
+  - oms-payone-error/**
+
 oms-retry-capture-process:
   - oms-retry-capture-process/**
