Feature/labeler update (#80)
* revert to v4

---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -51,6 +51,9 @@ carts-rest-api:
       - any-glob-to-any-file:
           - bundles/carts-rest-api/**
 
+catalog-sort-price:
+  - bundles/catalog-sort-price/**
+
 checkout-rest-api:
   - changed-files:
       - any-glob-to-any-file:
