chore: discount promotion rest api (#95)
---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/data-import": "^1.3.0",
+    "spryker/discount": "^9.34.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/oms": ">= 8.0.0",
@@ -23,8 +24,9 @@
     "spryker-eco/payone": "^4.4.2",
     "spryker/discount-promotions-rest-api": "^1.4.0",
     "spryker/product-image-storage": "^1.15",
-    "spryker/product-storage": "^1.1.0",
+    "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage-extension": "^1.0.0",
+    "spryker/product-storage": "^1.13.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
     "spryker/synchronization": "^1.16"
@@ -57,7 +59,8 @@
       "FondOfKudu\\Shared\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Shared/CartsRestApi",
       "FondOfKudu\\Client\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Client/CartsRestApi",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
-      "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
+      "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
+      "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Shared/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
