--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": ">=8.0",
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1",
+    "spryker-eco/payone": "^4.4.2",
     "spryker/carts-rest-api": "^5.0.0",
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
@@ -18,16 +19,18 @@
     "spryker/currency": "^3.2.0 || ^4.0.0",
     "spryker/data-import": "^1.3.0",
     "spryker/discount": "^9.34.0",
+    "spryker/discount-promotions-rest-api": "^1.4.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
-    "spryker-eco/payone": "^4.4.2",
-    "spryker/discount-promotions-rest-api": "^1.4.0",
+    "spryker/price-product-schedule": "^2.7.0",
+    "spryker/product": "^6.0.0",
+    "spryker/product-extension": "^1.5.0",
     "spryker/product-image-storage": "^1.3.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
-    "spryker/product-storage-extension": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
+    "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
     "spryker/synchronization": "^1.16"
@@ -47,6 +50,7 @@
     "fond-of-kudu/checkout-data-product-country-filter": "*",
     "fond-of-kudu/country-zipcode-restriction": "*",
     "fond-of-kudu/discount-promotion-rest-api": "*",
+    "fond-of-kudu/product-api-schedule-price-import": "*",
     "fond-of-kudu/product-image-storage-connector": "*",
     "fond-of-kudu/oms-order-confirmation": "*",
     "fond-of-kudu/oms-payone-error": "*",
@@ -80,7 +84,9 @@
       "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/src/FondOfKudu/Zed/OmsRetryCaptureProcess",
       "FondOfKudu\\Shared\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/src/FondOfKudu/Shared/OmsRetryCaptureProcess",
       "FondOfKudu\\Zed\\OmsPayoneError\\": "bundles/oms-payone-error/src/FondOfKudu/Zed/OmsPayoneError",
-      "FondOfKudu\\Shared\\OmsPayoneError\\": "bundles/oms-payone-error/src/FondOfKudu/Shared/OmsPayoneError"
+      "FondOfKudu\\Shared\\OmsPayoneError\\": "bundles/oms-payone-error/src/FondOfKudu/Shared/OmsPayoneError",
+      "FondOfKudu\\Zed\\ProductApiSchedulePriceImport\\": "bundles/product-api-schedule-price-import/src/FondOfKudu/Zed/ProductApiSchedulePriceImport",
+      "FondOfKudu\\Shared\\ProductApiSchedulePriceImport\\": "bundles/product-api-schedule-price-import/src/FondOfKudu/Shared/ProductApiSchedulePriceImport"
     }
   },
   "autoload-dev": {
@@ -97,6 +103,7 @@
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
       "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess",
       "FondOfKudu\\Zed\\OmsPayoneError\\": "bundles/oms-payone-error/tests/FondOfKudu/Zed/OmsPayoneError",
+      "FondOfKudu\\Zed\\ProductApiSchedulePriceImport\\": "bundles/product-api-schedule-price-import/tests/FondOfKudu/Zed/ProductConnector",
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
     }
